...
  <string name="admin_pin_new_confirm">Confirm 5-Digit PIN</string>
  <string name="admin_pin_error_pin_length">Your PIN should be 5 digits long.</string>
  <string name="admin_pin_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="save">Save</string>
  <string name="admin_pin_activity_title">Authorise to add profiles</string>
  <!-- AddProfileActivity -->
  <string name="add_profile_activity_label">Add Profile</string>
  <string name="add_profile_title">Add Profile</string>
  <string name="add_profile_input_name">Name</string>
  <string name="add_profile_input_pin">3-Digit PIN</string>
  <string name="add_profile_input_confirm_pin">Confirm 3-Digit PIN</string>
  <string name="add_profile_allow_download_heading">Allow Download Access</string>
  <string name="add_profile_allow_download_sub">User is able to download and delete content without Administrator PIN.</string>
  <string name="add_profile_create_btn">Create</string>
  <string name="add_profile_close">Close</string>
  <string name="add_profile_pin_info">With a PIN, nobody else can access a profile besides this assigned user.</string>
  <string name="add_profile_error_image_failed_store">We failed to store your avatar image. Please try again.</string>
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a valid name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Please choose a profile name that doesn\'t include numbers or symbols.</string>
  <string name="add_profile_error_missing_profile_type">Profile type unknown.</string>
  <string name="add_profile_default_error_message">An error occurred while creating a profile.</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
...
